add_subdirectory(bal)
add_subdirectory(calibration_odom_laser)
add_subdirectory(data_convert)
add_subdirectory(data_fitting)
add_subdirectory(dynamic_vertex)
add_subdirectory(icp)
add_subdirectory(interactive_slam)
add_subdirectory(line_slam)
add_subdirectory(plane_slam)
add_subdirectory(sba)
add_subdirectory(sim3)
add_subdirectory(simple_optimize)
add_subdirectory(sphere)
add_subdirectory(tutorial_slam2d)

# The condition on cholmod is required here because the cholmod solver
# is explicitly used in these examples.
if(G2O_USE_CHOLMOD)
  add_subdirectory(ba)
  add_subdirectory(ba_anchored_inverse_depth)
  add_subdirectory(target)
endif()

if(G2O_BUILD_VIEWER)
  add_subdirectory(slam2d)
endif()
